--- a/i3/config
+++ b/i3/config
@@ -391,6 +391,8 @@ exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 #exec --no-startup-id sleep 2 && xfce4-terminal
 #exec --no-startup-id sleep 7 && firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/force-knowledge.md
 #exec --no-startup-id sleep 3 && thunar
+exec --no-startup-id alacritty
+exec --no-startup-id firefox
 
 # set floating (nontiling)for apps needing it
 for_window [class="Yad" instance="yad"] floating enable
