--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -40,20 +40,20 @@
 separator=false
 markup=pango
 
-[terminal]
-full_text= 
-color=#807dfe
-command=xfce4-terminal
+#[terminal]
+#full_text= 
+#color=#807dfe
+#command=xfce4-terminal
 
-[browser]
-full_text= 
-color=#ff7f81
-command=firefox
+#[browser]
+#full_text= 
+#color=#ff7f81
+#command=firefox
 
-[files]
-full_text= 
-color=#7f3fbf
-command=thunar ~/
+#[files]
+#full_text= 
+#color=#7f3fbf
+#command=thunar ~/
 
 #[mail]
 #full_text= 
@@ -69,11 +69,11 @@ color=#717171
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
-label=
-instance=/
-command=~/.config/i3/scripts/disk
-interval=30
+#[disk]
+#label=
+#instance=/
+#command=~/.config/i3/scripts/disk
+#interval=30
 
 # Memory usage
 #
@@ -89,10 +89,10 @@ interval=30
 #min_width=CPU: 100.00%
 #interval=2
 
-[CPU-temperature]
-label=
-command=~/.config/i3/scripts/temperature
-interval=30
+#[CPU-temperature]
+#label=
+#command=~/.config/i3/scripts/temperature
+#interval=30
 #T_WARN=70
 #T_CRIT=90
 #SENSOR_CHIP=""
