--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -141,10 +141,18 @@ interval=1
 #full_text=
 #command=~/.config/i3/scripts/keyhint
 
+[simple-2]
+full_text=: :
+color=#717171
+
 [time]
 #label=
-command=date '+%d/%m %H:%M'
+command=date '+%d/%m  %H:%M'
 interval=1
+
+[simple-2]
+full_text=: :
+color=#717171
 
 [shutdown_menu]
 full_text=
@@ -153,3 +161,4 @@ command=~/.config/i3/scripts/powermenu
 [simple-2]
 full_text=: :
 color=#717171
+
